samples/_failures_safe/1761350221_fcb8f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fcdeb310.c: In function ‘main’:
./samples/SAFE/__tmp_fcdeb310.c:165:5: error: expected expression at end of input
  165 |     if (
      |     ^~
./samples/SAFE/__tmp_fcdeb310.c:165:5: error: expected declaration or statement at end of input
